# plan-course-scheduling

./: .env.example  .gitignore  README.md  admin_panel.py  dev_server.py  notion_config.json  pyproject.toml  pytest.ini  requirements.txt
config/: notion_20250907_191746_20250908-prog-10k-7.json  notion_20250907_191747_20250910-conseil-tri-erreur3.json  notion_20250907_191748_20250912-seance-10k-s7.json  notion_20250907_191750_20250917-conseil-tri-erreur4.json  notion_20250907_191755_20250919-seance-10k-s8.json  notion_20250907_191757_20250926-seance-10k-s9.json  notion_20250907_191758_20250929-prog-10k-10.json  notion_20250907_191800_20251003-seance-10k-s10.json  notion_20250907_191804_20251013-prog-10k-12.json  notion_20250907_191807_20251017-seance-10k-s12.json  notion_20250907_202432_20250915-prog-10k-8.json  notion_20250907_202432_20250922-prog-10k-9.json  notion_20250907_202433_20250924-conseil-tri-erreur5.json  notion_20250907_202433_20251006-prog-10k-11.json  notion_20250907_202434_20251010-seance-10k-s11.json  notion_20250907_203030_20251003-seance-10k-s10.json  notion_20250907_210952_20251006-prog-10k-11.json  notion_20250907_210953_20251010-seance-10k-s11.json  notion_20250907_210954_20251013-prog-10k-12.json  notion_20250907_210954_20251017-seance-10k-s12.json  reel_20250725_215000_test_cloudinary.json  reel_20250725_222224_test_cloudinary.json  reel_20250726_121807_20250802-meme-jet.json  reel_20250726_121822_20250729-prog-10k-1.json  reel_20250726_121844_20250730-conseil-tri.json  reel_20250726_121909_20250728-seance-velo.json  (+47 more)
scripts/: check_posts_due.py  (+10 more)
(+11 files in other folders)
